[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"    # error handling
bytes = "1.3.0"      # helps manage buffers
libc = "0.2.178"
thiserror = "2.0.17" # error handling
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
  "Win32_UI_Input_KeyboardAndMouse",
] }
